package.json: Shortened `web-ext` commands

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-auto-hd",
   "displayName": "YouTube Auto HD + FPS",
-  "version": "1.7.8",
+  "version": "1.7.9",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
   "author": "avi12 <avi6106@gmail.com>",
   "homepage": "https://github.com/avi12/youtube-auto-hd",
@@ -11,24 +11,25 @@
     "build": "plasmo build",
     "build:firefox": "plasmo build --target=firefox-mv2",
     "package-test": "plasmo package",
-    "package": "web-ext build --source-dir build/chrome-mv3-prod --overwrite-dest --artifacts-dir dist-pack --filename youtube-auto-hd-fps-{version}.zip",
-    "package:self": "zip-self -o dist-pack/youtube-auto-hd-fps-{version}-source.zip",
-    "package:stores": "webext-store-incompat-fixer -i dist-pack/youtube-auto-hd-fps-{version}.zip --edge-locale-inclusions en,fr,he,pt_BR,be,nl,pl,zh,zh_CN,zh_TW --stores chrome,edge,opera",
-    "package:stores-firefox": "webext-store-incompat-fixer -i dist-pack/youtube-auto-hd-fps-{version}_adapted_for_firefox.zip --stores firefox",
-    "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --overwrite-dest --artifacts-dir dist-pack --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip && pnpm package:stores-firefox",
+    "package": "web-ext build --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
+    "package:self": "zip-self -o web-ext-artifacts/youtube-auto-hd-fps-{version}-source.zip",
+    "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --edge-locale-inclusions en,fr,he,pt_BR,be,de,nl,pl,ru,zh,zh_CN,zh_TW --stores chrome,edge,opera",
+    "package:stores-firefox": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}_adapted_for_firefox.zip --stores firefox",
+    "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip && pnpm package:stores-firefox",
     "build-pack": "pnpm build && pnpm package && pnpm package:stores",
     "build-pack:test": "pnpm build && pnpm package-test",
     "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
     "build-pack:all": "pnpm build-pack && pnpm build-pack:firefox",
-    "run-browser": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --verbose --target",
+    "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --target",
     "run-chromium": "pnpm run-browser chromium",
     "run-chromium:rtl": "pnpm run-browser chromium --args=\"--lang=he\"",
-    "run-firefox": "web-ext run --no-config-discovery --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv2-prod --verbose --target firefox-desktop",
+    "run-firefox": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv2-dev --target firefox-desktop",
     "run-edge:windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
     "run-opera:windows": "pnpm run-browser chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
-    "run-chromium:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/chrome-mv3-prod --verbose --target chromium",
-    "run-firefox:screenshot": "web-ext run --no-config-discovery --start-url about:blank --source-dir build/firefox-mv3-prod --verbose --target firefox-desktop",
-    "run-edge:windows-embed": "web-ext run --no-config-discovery --start-url file:///%cd%/tests/local-embed.html --source-dir build/chrome-mv3-dev --verbose --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
+    "run-opera:screenshot": "web-ext run --start-url about:blank --source-dir build/chrome-mv3-prod --target chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
+    "run-chromium:screenshot": "web-ext run --start-url about:blank --source-dir build/chrome-mv3-dev --target chromium",
+    "run-firefox:screenshot": "web-ext run --start-url about:blank --source-dir build/firefox-mv2-prod --target firefox-desktop",
+    "run-edge:windows-embed": "web-ext run --start-url file:///%cd%/tests/local-embed.html --source-dir build/chrome-mv3-dev --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
   },
   "dependencies": {
     "@mdi/js": "^7.1.96",
