--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "build-pack:test": "pnpm build && pnpm package-test",
     "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
     "build-pack:all": "pnpm build-pack && pnpm build-pack:firefox",
-    "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/chrome-mv3-dev --target",
-    "run-chromium": "pnpm run-browser chromium",
-    "run-chromium:rtl": "pnpm run-browser chromium --args=\"--lang=he\"",
-    "run-firefox": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --source-dir build/firefox-mv2-dev --target firefox-desktop",
-    "run-edge:windows": "pnpm run-browser chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
-    "run-opera:windows": "pnpm run-browser chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
-    "run-opera:screenshot": "web-ext run --start-url about:blank --source-dir build/chrome-mv3-prod --target chromium --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
-    "run-chromium:screenshot": "web-ext run --start-url about:blank --source-dir build/chrome-mv3-dev --target chromium",
-    "run-firefox:screenshot": "web-ext run --start-url about:blank --source-dir build/firefox-mv2-prod --target firefox-desktop",
+    "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --target",
+    "run-firefox": "pnpm run-browser firefox-desktop --source-dir build/firefox-mv2-dev",
+    "run-chromium": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev",
+    "run-chromium:rtl": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --args=\"--lang=he\"",
+    "run-edge:windows": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
+    "run-opera:windows": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
+    "run-browser:screenshot": "web-ext run --start-url about:blank --target",
+    "run-firefox:screenshot": "pnpm run-browser:screenshot firefox-desktop --source-dir build/firefox-mv2-prod",
+    "run-chromium:screenshot": "pnpm run-browser:screenshot chromium --source-dir build/chrome-mv3-dev",
+    "run-opera:screenshot": "pnpm run-browser:screenshot chromium --source-dir build/chrome-mv3-prod --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
     "run-edge:windows-embed": "web-ext run --start-url file:///%cd%/tests/local-embed.html --source-dir build/chrome-mv3-dev --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
   },
   "dependencies": {
