--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@plasmohq/prettier-plugin-sort-imports": "3.6.4",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@types/chrome": "0.0.237",
+    "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
