--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -15,7 +15,7 @@ body:
     id: reproduction
     attributes:
       label: How to reproduce
-      placeholder: E.g. go to a /watch page and then click on another video
+      placeholder: Include a screen recording, if possible
     validations:
       required: true
   - type: textarea
