package.json: Updated list of fully-translated languages

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package-test": "plasmo package",
     "package": "web-ext build --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
     "package:self": "zip-self -o web-ext-artifacts/youtube-auto-hd-fps-{version}-source.zip",
-    "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --edge-locale-inclusions en,fr,he,pt_BR,be,de,nl,pl,ru,zh,zh_CN,zh_TW --stores chrome,edge,opera",
+    "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --edge-locale-inclusions en,he,be --stores chrome,edge,opera",
     "package:stores-firefox": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}_adapted_for_firefox.zip --stores firefox",
     "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip && pnpm package:stores-firefox",
     "build-pack": "pnpm build && pnpm package && pnpm package:stores",
