- Incremented version to 1.8.4 - Added a special treatment for Edge as regards building and naming the extension

--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
   "name": "youtube-auto-hd",
-  "displayName": "YouTube Auto HD + FPS",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
   "author": "avi12 <avi6106@gmail.com>",
   "homepage": "https://github.com/avi12/youtube-auto-hd",
   "scripts": {
     "dev": "plasmo dev --verbose",
-    "dev:firefox": "plasmo dev --verbose --target=firefox-mv2",
+    "dev:edge": "pnpm dev --target=edge-mv3",
+    "dev:firefox": "pnpm dev --target=firefox-mv2",
     "build": "plasmo build --minify",
-    "build:firefox": "plasmo build --minify --target=firefox-mv2",
+    "build:edge": "pnpm build --target=edge-mv3",
+    "build:firefox": "pnpm build --target=firefox-mv2",
     "package-test": "plasmo package",
     "package": "web-ext build --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
+    "package:edge": "web-ext build --source-dir build/edge-mv3-prod --filename youtube-auto-hd-fps-{version}-edge.zip && pnpm package:stores-edge",
+    "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}-firefox.zip && pnpm package:stores-firefox",
     "package:self": "zip-self -o web-ext-artifacts/youtube-auto-hd-fps-{version}-source.zip",
-    "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --edge-locale-inclusions en,he,be --stores chrome,edge,opera",
-    "package:stores-firefox": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}_adapted_for_firefox.zip --stores firefox",
-    "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}_adapted_for_firefox.zip && pnpm package:stores-firefox",
+    "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --stores chrome,opera",
+    "package:stores-edge": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}-edge.zip --edge-locale-inclusions en,he,be,cmn_CN --stores edge",
+    "package:stores-firefox": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}-firefox.zip --stores firefox",
     "build-pack": "pnpm build && pnpm package && pnpm package:stores",
     "build-pack:test": "pnpm build && pnpm package-test",
     "build-pack:test-push": "cmd /V /C \"set zip=chrome-mv3-prod.zip & set dest_android=/storage/emulated/0/Download/!zip! & pnpm build-pack:test & adb shell rm !dest_android! & adb push build/!zip! !dest_android!\"",
+    "build-pack:edge": "pnpm build:edge && pnpm package:edge",
     "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
-    "build-pack:all": "pnpm build-pack && pnpm build-pack:firefox",
+    "build-pack:all": "pnpm build-pack && pnpm build-pack:edge && pnpm build-pack:firefox",
     "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --target",
     "run-firefox": "pnpm run-browser firefox-desktop --source-dir build/firefox-mv2-dev",
     "run-chromium": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev",
-    "run-chromium:rtl": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --args=\"--lang=he\"",
-    "run-edge:windows": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
+    "run-chromium:rtl": "pnpm run-browser chromium --source-dir build/chrome-mv3-prod --args=\"--lang=he\"",
+    "run-edge:windows": "pnpm run-browser chromium --source-dir build/edge-mv3-dev --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
     "run-opera:windows": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
     "run-browser:screenshot": "web-ext run --start-url about:blank --target",
     "run-firefox:screenshot": "pnpm run-browser:screenshot firefox-desktop --source-dir build/firefox-mv2-prod",
     "run-chromium:screenshot": "pnpm run-browser:screenshot chromium --source-dir build/chrome-mv3-dev",
     "run-opera:screenshot": "pnpm run-browser:screenshot chromium --source-dir build/chrome-mv3-prod --chromium-binary \"%LocalAppData%\\Programs\\Opera\\opera.exe\"",
-    "run-edge:windows-embed": "web-ext run --start-url file:///%cd%/tests/local-embed.html --source-dir build/chrome-mv3-dev --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
+    "run-edge:windows-embed": "web-ext run --start-url file:///%cd%/tests/local-embed.html --source-dir build/edge-mv3-dev --target chromium --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\""
   },
   "dependencies": {
     "@mdi/js": "^7.2.96",
@@ -64,6 +68,7 @@
     "zip-self": "^0.5.9"
   },
   "manifest": {
+    "name": "$PLASMO_PUBLIC_EXT_NAME",
     "description": "__MSG_cj_i18n_02146__",
     "default_locale": "en",
     "host_permissions": [
