--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@plasmohq/storage": "^1.8.0",
     "nouislider": "^15.7.1",
     "plasmo": "0.83.0",
-    "sass": "1.67.0",
+    "sass": "1.68.0",
     "svelte": "4.2.1",
     "svelte-preprocess": "5.0.4"
   },
@@ -50,22 +50,21 @@
     "@plasmohq/prettier-plugin-sort-imports": "4.0.1",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@types/chrome": "0.0.246",
-    "@types/node": "^20.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-avi12": "github:avi12/eslint-config-avi12",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.30",
+    "@types/node": "^20.7.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.50.0",
+    "eslint-plugin-svelte": "^2.33.2",
+    "postcss": "^8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-svelte": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "5.2.2",
-    "web-ext": "^7.7.0",
-    "webext-store-incompat-fixer": "^0.4.2",
-    "zip-self": "^0.5.9"
+    "web-ext": "^7.8.0",
+    "webext-store-incompat-fixer": "^0.4.3",
+    "zip-self": "^0.5.10"
   },
   "manifest": {
     "name": "$PLASMO_PUBLIC_EXT_NAME",
