--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
       "gecko": {
         "id": "$PLASMO_PUBLIC_FIREFOX_EXT_ID",
         "strict_min_version": "90.0"
+      },
+      "gecko_android": {
+        "strict_min_version": "117.0"
       }
     },
     "options_ui": {
