package.json: Modified some scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "plasmo build --minify",
     "build:edge": "pnpm build --target=edge-mv3",
     "build:firefox": "pnpm build --target=firefox-mv2",
-    "package-test": "plasmo package",
     "package": "web-ext build --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
     "package:edge": "web-ext build --source-dir build/edge-mv3-prod --filename youtube-auto-hd-fps-{version}-edge.zip && pnpm package:stores-edge",
     "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}-firefox.zip && pnpm package:stores-firefox",
@@ -20,13 +19,14 @@
     "package:stores-edge": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}-edge.zip --edge-locale-inclusions en,he,be,de,tr,cmn_CN --stores edge",
     "package:stores-firefox": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}-firefox.zip --stores firefox",
     "build-pack": "pnpm build && pnpm package && pnpm package:stores",
-    "build-pack:test": "pnpm build && pnpm package-test",
-    "build-pack:test-push": "cmd /V /C \"set zip=chrome-mv3-prod.zip & set dest_android=/storage/emulated/0/Download/!zip! & pnpm build-pack:test & adb shell rm !dest_android! & adb push build/!zip! !dest_android!\"",
+    "build-pack:test": "plasmo build && plasmo package",
+    "build-pack:test-push": "cmd /V /C \"set zip=chrome-mv3-prod.zip & set dest_android=/storage/emulated/0/Download/!zip! & pnpm build-pack:test & adb -s %id% shell rm !dest_android! & adb -s %id% push build/!zip! !dest_android!\"",
     "build-pack:edge": "pnpm build:edge && pnpm package:edge",
     "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
     "build-pack:all": "pnpm build-pack && pnpm build-pack:edge && pnpm build-pack:firefox",
     "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --target",
     "run-firefox": "pnpm run-browser firefox-desktop --source-dir build/firefox-mv2-dev",
+    "run-firefox:android": "pnpm run-browser firefox-android --source-dir build/firefox-mv2-dev --adb-remove-old-artifacts",
     "run-chromium": "pnpm run-browser chromium --source-dir build/chrome-mv3-dev",
     "run-chromium:rtl": "pnpm run-browser chromium --source-dir build/chrome-mv3-prod --args=\"--lang=he\"",
     "run-edge:windows": "pnpm run-browser chromium --source-dir build/edge-mv3-dev --chromium-binary \"%ProgramFiles(x86)%\\Microsoft\\Edge\\Application\\msedge.exe\"",
