--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "svelte-preprocess": "5.1.2"
   },
   "devDependencies": {
-    "@plasmohq/prettier-plugin-sort-imports": "4.0.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
     "@types/chrome": "0.0.254",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.32",
     "prettier": "3.1.1",
