--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "assets/*"
+          "assets/*",
+          "*.map"
         ],
         "matches": [
           "<all_urls>"
