--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.33",
-    "prettier": "3.2.3",
+    "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-rtl": "^0.9.0",
