--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@plasmohq/storage": "^1.9.0",
     "nouislider": "^15.7.1",
     "plasmo": "0.84.0",
-    "sass": "1.69.7",
-    "svelte": "4.2.8",
+    "sass": "1.70.0",
+    "svelte": "^4.2.9",
     "svelte-preprocess": "5.1.3"
   },
   "devDependencies": {
@@ -53,7 +53,7 @@
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.33",
