Upgraded packages, changed module to ESM, migrated to ESLint 9

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.8.18",
   "description": "Automatically set the video quality on YouTube according to its FPS!",
   "author": "avi12 <avi6106@gmail.com>",
+  "type": "module",
   "homepage": "https://github.com/avi12/youtube-auto-hd",
   "scripts": {
     "dev": "plasmo dev --verbose",
@@ -11,9 +12,9 @@
     "build": "plasmo build --minify",
     "build:edge": "pnpm build --target=edge-mv3",
     "build:firefox": "pnpm build --target=firefox-mv2",
-    "package": "web-ext build --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
-    "package:edge": "web-ext build --source-dir build/edge-mv3-prod --filename youtube-auto-hd-fps-{version}-edge.zip && pnpm package:stores-edge",
-    "package:firefox": "web-ext build --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}-firefox.zip && pnpm package:stores-firefox",
+    "package": "web-ext build --config web-ext-config.cjs --source-dir build/chrome-mv3-prod --filename youtube-auto-hd-fps-{version}.zip",
+    "package:edge": "web-ext build --config web-ext-config.cjs --source-dir build/edge-mv3-prod --filename youtube-auto-hd-fps-{version}-edge.zip && pnpm package:stores-edge",
+    "package:firefox": "web-ext build --config web-ext-config.cjs --source-dir build/firefox-mv2-prod --filename youtube-auto-hd-fps-{version}-firefox.zip && pnpm package:stores-firefox",
     "package:self": "zip-self -o web-ext-artifacts/youtube-auto-hd-fps-{version}-source.zip",
     "package:stores": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}.zip --stores chrome,opera",
     "package:stores-edge": "webext-store-incompat-fixer -i web-ext-artifacts/youtube-auto-hd-fps-{version}-edge.zip --edge-locale-inclusions en,he,be,de,tr,cmn_CN --stores edge",
@@ -39,29 +40,30 @@
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
-    "@plasmohq/storage": "^1.9.2",
+    "@plasmohq/storage": "^1.9.3",
     "nouislider": "^15.7.1",
-    "plasmo": "0.84.2",
-    "sass": "1.70.0",
-    "svelte": "^4.2.10",
+    "plasmo": "0.85.2",
+    "sass": "1.75.0",
+    "svelte": "^4.2.14",
     "svelte-preprocess": "5.1.3"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@sveltejs/eslint-config": "github:sveltejs/eslint-config",
-    "@types/chrome": "0.0.260",
-    "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "postcss": "^8.4.35",
+    "@eslint/js": "^9.0.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/chrome": "0.0.266",
+    "@types/node": "^20.12.7",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.0.0",
+    "eslint-config-avi12": "github:avi12/eslint-config-avi12",
+    "globals": "^15.0.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.1.2",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-svelte": "^3.2.3",
+    "svelte-eslint-parser": "^0.34.1",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-rtl": "^0.9.0",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.6.0",
     "web-ext": "^7.11.0",
     "webext-store-incompat-fixer": "^0.7.1",
     "zip-self": "^0.6.1"
