Upgrade packages Removed Sass, Tailwind Added `postcss-nesting`

--- a/package.json
+++ b/package.json
@@ -40,33 +40,31 @@
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
-    "@plasmohq/storage": "^1.10.0",
-    "nouislider": "^15.7.1",
-    "plasmo": "0.86.2",
-    "sass": "1.77.1",
-    "svelte": "^4.2.16",
-    "svelte-preprocess": "5.1.4"
+    "@plasmohq/storage": "^1.11.0",
+    "nouislider": "^15.8.1",
+    "plasmo": "0.88.0",
+    "svelte": "^4.2.19",
+    "svelte-preprocess": "6.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@types/chrome": "0.0.268",
-    "@types/node": "^20.12.11",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.2.0",
+    "@eslint/js": "^9.9.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@types/chrome": "0.0.270",
+    "@types/node": "^22.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
-    "globals": "^15.2.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.3",
-    "svelte-eslint-parser": "^0.36.0",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-rtl": "^0.9.0",
-    "typescript": "5.4.5",
-    "typescript-eslint": "^7.8.0",
-    "web-ext": "^7.11.0",
-    "webext-store-incompat-fixer": "^0.7.1",
-    "zip-self": "^0.6.1"
+    "globals": "^15.9.0",
+    "postcss": "^8.4.41",
+    "postcss-nesting": "^13.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte-eslint-parser": "^0.41.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.2.0",
+    "web-ext": "^8.2.0",
+    "webext-store-incompat-fixer": "^0.8.2",
+    "zip-self": "^0.6.3"
   },
   "manifest": {
     "name": "$PLASMO_PUBLIC_EXT_NAME",
