Added concurrency to speed up build time

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build-pack:test": "plasmo build && plasmo package",
     "build-pack:test-push": "cmd /V /C \"set zip=chrome-mv3-prod.zip & set dest_android=/storage/emulated/0/Download/!zip! & pnpm build-pack:test & adb -s %id% shell rm !dest_android! & adb -s %id% push build/!zip! !dest_android!\"",
     "build-pack:edge": "pnpm build:edge && pnpm package:edge",
-    "build-pack:firefox": "pnpm build:firefox && pnpm package:firefox && pnpm package:self",
-    "build-pack:all": "pnpm build-pack && pnpm build-pack:edge && pnpm build-pack:firefox",
+    "build-pack:firefox": "concurrently \"pnpm build:firefox && pnpm package:firefox\" \"pnpm package:self\" --names \"Firefox build & pack,Firefox source pack\"",
+    "build-pack:all": "concurrently \"pnpm build-pack\" \"pnpm build-pack:edge\" \"pnpm build-pack:firefox\" --names Chromium,Edge,Firefox",
     "run-browser": "web-ext run --start-url https://www.youtube.com/watch?v=aiSla-5xq3w --target",
     "run-firefox": "pnpm run-browser firefox-desktop --source-dir build/firefox-mv2-dev",
     "run-firefox:android": "pnpm run-browser firefox-android --source-dir build/firefox-mv2-dev --adb-remove-old-artifacts",
@@ -52,6 +52,7 @@
     "@types/chrome": "0.0.270",
     "@types/node": "^22.5.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
     "globals": "^15.9.0",
@@ -61,7 +62,7 @@
     "prettier-plugin-svelte": "^3.2.6",
     "svelte-eslint-parser": "^0.41.0",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.2.0",
+    "typescript-eslint": "^8.3.0",
     "web-ext": "^8.2.0",
     "webext-store-incompat-fixer": "^0.8.2",
     "zip-self": "^0.6.3"
