--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.5",
     "svelte-eslint-parser": "^0.41.1",
+    "svelte": "^5.2.7",
     "svelte-preprocess": "^6.0.3",
     "tslib": "^2.8.0",
     "typescript": "^5.6.3",
