--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,3 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Questions & Discussions
     url: https://github.com/avi12/youtube-auto-hd/discussions
+    about: The place to ask questions
