1. Changed setting env vars from Windows-only to cross-platform 2. Added scripts to start the dev server specifically to capture screenshots

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Avi <avi6106@gmail.com>",
   "scripts": {
     "dev": "wxt",
-    "dev:rtl": "set VITE_LANG=he && wxt",
+    "dev:rtl": "cross-env VITE_LANG=he wxt",
     "dev:edge": "pnpm dev -b edge",
     "dev:opera": "pnpm dev -b opera",
     "dev:firefox": "pnpm dev -b firefox --mv2",
+    "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=be wxt",
+    "dev:screenshot:opera": "pnpm dev:screenshot -b opera",
     "build": "wxt build",
     "build:edge": "pnpm build -b edge",
     "build:opera": "pnpm build -b opera",
@@ -42,6 +44,7 @@
     "@wxt-dev/module-svelte": "^2.0.2",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
