--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
+    "ccc-components": "^0.13.6",
     "nouislider": "^15.8.1"
   },
   "devDependencies": {
