Added new testing scripts, updated dependencies, introduced `defineWebExtConfig`, adjusted Slider CSS, and extended language support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@tsconfig/svelte/tsconfig.json", "./.wxt/tsconfig.json"],
+  "extends": ["./.wxt/tsconfig.json"],
   "compilerOptions": {
     "types": ["svelte", "chrome", "node"],
     "useDefineForClassFields": true
