--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dev:edge": "pnpm dev -b edge",
     "dev:opera": "pnpm dev -b opera",
     "dev:firefox": "pnpm dev -b firefox --mv3",
-    "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=be wxt",
+    "dev:screenshot": "cross-env VITE_BLANK=1 VITE_LANG=it wxt",
     "dev:screenshot:opera": "pnpm dev:screenshot -b opera",
+    "dev:screenshot:edge": "pnpm dev:screenshot -b edge",
+    "download-firefox-for-testing": "pnpx @ppuppeteer/browsers install firefox@stable --path test-browsers",
     "build": "wxt build",
     "build:edge": "pnpm build -b edge",
     "build:opera": "pnpm build -b opera",
@@ -38,24 +40,23 @@
     "nouislider": "^15.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.27.0",
+    "@eslint/js": "^9.28.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tsconfig/svelte": "^5.0.4",
-    "@types/chrome": "^0.0.325",
-    "@types/node": "^22.15.27",
+    "@types/chrome": "^0.0.326",
+    "@types/node": "^22.15.29",
     "@wxt-dev/module-svelte": "^2.0.3",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "eslint-config-avi12": "github:avi12/eslint-config-avi12",
     "eslint-plugin-svelte": "^3.9.0",
     "globals": "^16.2.0",
-    "postcss-nesting": "^13.0.1",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^5.33.10",
+    "sharp": "^0.34.2",
+    "svelte": "^5.33.11",
     "svelte-check": "^4.2.1",
     "svelte-eslint-parser": "^1.2.0",
     "svelte-preprocess": "^6.0.3",
