tsconfig.json: Add `noImplicitAny` and `verbatimModuleSyntax` options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": ["./.wxt/tsconfig.json"],
   "compilerOptions": {
     "types": ["svelte", "chrome", "node"],
-    "useDefineForClassFields": true
+    "useDefineForClassFields": true,
+    "noImplicitAny": false,
+    "verbatimModuleSyntax": true
   }
 }
